deployments/habitica/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: habitica-ingress
  namespace: habitica
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`habitica.local.tigovanroy.space`) 
      kind: Rule
      services:
        - name: habitica-service
          port: 3000 
      middlewares:
        - name: habitica-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
